--- a/sass/custom.css
+++ b/sass/custom.css
@@ -1,1 +1,6 @@
-/*# sourceMappingURL=custom.css.map */
+#callToAction ol li:not(:last-child) {
+  margin-right: 15px;
+}
+#callToAction ol li svg {
+  margin-right: 5px;
+}/*# sourceMappingURL=custom.css.map */
