--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -14,3 +14,17 @@
         }
     }
 }
+
+
+// =========================================================
+// ====================== Responsive =======================
+// =========================================================
+
+// Call To Action
+@media (max-width: 767.98px){
+    #callToAction {
+        .left, .inner_right {
+            justify-content: center !important;
+        }
+    }
+}
