--- a/css/custom_template.css
+++ b/css/custom_template.css
@@ -1,7 +1,7 @@
 /********** Template CSS **********/
 :root {
     --primary: #109806;
-    --secondary: #777777;
+    --secondary: #ffffff;
     --light: #F8F8F8;
     --dark: #252525;
 }
@@ -78,20 +78,6 @@
 
 
 /*** Navbar ***/
-.navbar {
-    background: var(--primary);
-}
-.navbar .dropdown-toggle::after {
-    border: none;
-    content: "\f107";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    vertical-align: middle;
-    margin-left: 8px;
-}
-
-
-
 .navbar .navbar-nav .nav-link {
     margin-right: 30px;
     padding: 20px 0;
