--- a/sass/custom.css
+++ b/sass/custom.css
@@ -24,6 +24,9 @@
 .navbar .dropdown-menu a:hover {
   color: var(--dark);
 }
+.navbar .dropdown-menu-end {
+  right: 0;
+}
 
 @media (max-width: 767.98px) {
   #callToAction .left, #callToAction .inner_right {
