Change Slider and style file

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Maryam Portfolio
+Theme Name: MM Info Tech
 Theme URI: 
 Author: MM IT Solutions
 Author URI: https://bcc.khulna.mshohel.com/
