--- a/sass/custom.css
+++ b/sass/custom.css
@@ -38,6 +38,11 @@
   right: 0;
 }
 
+.home_slider .attachment-slider.size-slider {
+  width: 100%;
+  height: auto;
+}
+
 @media (max-width: 767.98px) {
   #callToAction .left, #callToAction .inner_right {
     justify-content: center !important;
