--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -50,6 +50,13 @@
     }
 }
 
+.home_slider{
+    .attachment-slider.size-slider {
+        width: 100%;
+        height: auto;
+    }
+}
+
 
 // =========================================================
 // ====================== Responsive =======================
